{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 151,
  "lineage": "8174e735-3484-8768-fbb0-185582d87750",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-0bb3d4d6c78723479",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_role_for_codedeploy",
            "id": "i-0bb3d4d6c78723479",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dotoryeee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa2ed62d12dae70c",
            "private_dns": "ip-10-0-0-33.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.33",
            "public_dns": "ec2-13-124-159-162.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.159.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0938824edc229f7b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b2b1442daa5687c0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04eb8a137b83b34e8",
            "tags": {
              "Name": "talentpool-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2b1442daa5687c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.dotoryeee",
            "aws_security_group.public_ec2",
            "aws_subnet.public-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-07136ae9f8c72182d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_role_for_codedeploy",
            "id": "i-07136ae9f8c72182d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dotoryeee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be818a481e7feb4d",
            "private_dns": "ip-10-0-1-228.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-13-209-17-39.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.17.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de70172b3a598b2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b2b1442daa5687c0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f2cd317aeebff76",
            "tags": {
              "Name": "talentpool-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2b1442daa5687c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.dotoryeee",
            "aws_security_group.public_ec2",
            "aws_subnet.public-2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-0378dcedea95a2dfb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_role_for_codedeploy",
            "id": "i-0378dcedea95a2dfb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dotoryeee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00bf890474fdd136d",
            "private_dns": "ip-10-0-0-211.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.211",
            "public_dns": "ec2-3-35-51-222.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.51.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebd5908fe4ac77c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b2b1442daa5687c0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04eb8a137b83b34e8",
            "tags": {
              "Name": "talentpool-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2b1442daa5687c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.dotoryeee",
            "aws_security_group.public_ec2",
            "aws_subnet.public-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:internet-gateway/igw-0b0f7003d04dd6a24",
            "id": "igw-0b0f7003d04dd6a24",
            "owner_id": "737382971423",
            "tags": {
              "Name": "igw-talent-pool"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:route-table/rtb-049eeeb94796d0973",
            "id": "rtb-049eeeb94796d0973",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-private-talent-pool"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:route-table/rtb-01f8426d28a085e23",
            "id": "rtb-01f8426d28a085e23",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0f7003d04dd6a24",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-public-talent-pool"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-asso-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087f3107a42d71619",
            "route_table_id": "rtb-049eeeb94796d0973",
            "subnet_id": "subnet-01159a494fb6f9be0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-asso-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0954f036c2d98f55f",
            "route_table_id": "rtb-049eeeb94796d0973",
            "subnet_id": "subnet-09e9a69be5d2eb649"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-asso-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ebf90277cbda41",
            "route_table_id": "rtb-01f8426d28a085e23",
            "subnet_id": "subnet-04eb8a137b83b34e8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-asso-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08825d9d2075e4ebe",
            "route_table_id": "rtb-01f8426d28a085e23",
            "subnet_id": "subnet-01f2cd317aeebff76"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:security-group/sg-0b2b1442daa5687c0",
            "description": "allow ssh http docker-swarm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2b1442daa5687c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "SG-for-server-nodes",
            "name_prefix": "",
            "owner_id": "737382971423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-EC2-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:security-group/sg-058818971f113837d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-058818971f113837d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2b1442daa5687c0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG-for-RDS",
            "name_prefix": "",
            "owner_id": "737382971423",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-01159a494fb6f9be0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01159a494fb6f9be0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "tags": {
              "Name": "private-2a"
            },
            "tags_all": {
              "Name": "private-2a"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-09e9a69be5d2eb649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09e9a69be5d2eb649",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "tags": {
              "Name": "private-2c"
            },
            "tags_all": {
              "Name": "private-2c"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-04eb8a137b83b34e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04eb8a137b83b34e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737382971423",
            "tags": {
              "Name": "public-2a"
            },
            "tags_all": {
              "Name": "public-2a"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-01f2cd317aeebff76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01f2cd317aeebff76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737382971423",
            "tags": {
              "Name": "public-2c"
            },
            "tags_all": {
              "Name": "public-2c"
            },
            "vpc_id": "vpc-01e64c450d5d42d76"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:vpc/vpc-01e64c450d5d42d76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09769fb7a1467145b",
            "default_route_table_id": "rtb-04e13fd3fb7422b51",
            "default_security_group_id": "sg-026210f9d9a6ae7f0",
            "dhcp_options_id": "dopt-7ca0c217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e64c450d5d42d76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e13fd3fb7422b51",
            "owner_id": "737382971423",
            "tags": {
              "Name": "vpc-talent-pool"
            },
            "tags_all": {
              "Name": "vpc-talent-pool"
            }
          }
        }
      ]
    }
  ]
}